[package]
name = "tapmusic-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["blocking"] }
tokio = "1.36.0"
